# poi

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.panel  Dockerfile.serverless  Dockerfile.worker  HANDOFF.md  TASKS.md  docker-compose.yml
kernels/common/: keccak.cuh  mp_uint256.cuh  ripemd160.cuh  sha256.cuh
kernels/ed25519/: ed25519_inverse.cu  ed25519_iterate.cu  ed25519_keygen.cu  ed25519_precomp.cuh  fe25519.cuh  ge25519.cuh  sha512.cuh
kernels/scoring/: score_benchmark.cu  score_matching.cu  score_prefix.cu
kernels/secp256k1/: secp256k1_init.cu  secp256k1_inverse.cu  secp256k1_iterate.cu  secp256k1_iterate_bitcoin.cu  secp256k1_ops.cuh  secp256k1_precomp.cuh
panel/: api.go  balance_checker.go  go.mod  go.sum  job_manager.go  main.go  runpod_trigger.go  sol_scanner.go  solana.go  web.go
panel/db/: db.go  events.go  jobs.go  results.go  strategies.go  workers.go
panel/pb/: hyperfanity.pb.go  hyperfanity_grpc.pb.go
proto/: hyperfanity.proto
scripts/: deploy-runpod.sh  deploy-serverless.sh  deploy-worker.sh
serverless/: handler.py  requirements.txt
src/: arg_parser.cpp  arg_parser.hpp  hex_utils.hpp  main.cpp  speed_sample.cpp  speed_sample.hpp  types.hpp
src/chain/: base58.cpp  base58.hpp  bitcoin.cpp  bitcoin.hpp  chain.hpp  ethereum.cpp  ethereum.hpp  solana.cpp  solana.hpp  tron.cpp  tron.hpp
src/crypto/: sha256.cpp  sha256.hpp  sha512.cpp  sha512.hpp
src/dispatch/: dispatcher.cpp  dispatcher.hpp  gpu_device.cpp  gpu_device.hpp  gpu_memory.cpp  gpu_memory.hpp
src/scoring/: mode.cpp  mode.hpp  scorer.hpp
tests/: test_base58.cpp  test_bitcoin_address.cpp  test_ed25519.cu  test_ethereum_address.cpp  test_keccak.cu  test_mp_uint256.cu  test_secp256k1.cu  test_solana_address.cpp  test_tron_address.cpp
tools/: gen_precomp_ed25519.py  gen_precomp_secp256k1.py  verify_address.py
